# helixa-aomi-app-v0

./: README.md
.aomi/: deployment.json
helixa/: Cargo.toml  DEMO.md  README.md  aomi.toml
helixa/src/: client.rs  lib.rs  tool.rs
