[package]
name = "helixa"
version = "0.1.0"
edition = "2024"
description = "Read-only Helixa AgentDNA and Cred tools for Aomi"

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk = "=3.0.1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "charset", "http2", "json", "query", "rustls"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
